--- a/ContentLib/RecipePatches/Recipe_Package_LiquidTurboFuel.json
+++ b/ContentLib/RecipePatches/Recipe_Package_LiquidTurboFuel.json
@@ -1,15 +1,15 @@
 //Game/FactoryGame/Recipes/OilRefinery/Recipe_PackagedTurboFuel.Recipe_PackagedTurboFuel_C
 {
-  "$schema": "https://github.com/Nogg-aholic/ContentLib_Recipes/blob/master/FContentLib_Recipes.json",
+  "$schema": "https://raw.githubusercontent.com/budak7273/ContentLib_Documentation/main/JsonSchemas/CL_Recipe.json",
   "Ingredients": [
     {
-      "item": "LiquidTurboFuel",
+      "item": "Desc_LiquidTurboFuel",
       "Amount": 2000
     }
   ],
   "Products": [
     {
-      "item": "TurboFuel",
+      "item": "Desc_TurboFuel",
       "Amount": 2
     }
   ]
