--- a/Jimmon_NoPackageFluid.uplugin
+++ b/Jimmon_NoPackageFluid.uplugin
@@ -1,12 +1,12 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "1.2.0",
-	"SemVersion": "1.2.0",
-	"FriendlyName": "Jimmon No Packages For Fluid",
-	"Description": "Lite Mod for ContentLib, removes the need for containers when packaging fluids",
+	"VersionName": "1.3.0",
+	"SemVersion": "1.3.0",
+	"FriendlyName": "No Packages For Fluids and Gasses",
+	"Description": "Lite Mod for ContentLib, removes the need for containers when packaging fluids and gasses",
 	"Category": "Modding",
-	"CreatedBy": "jimmon89",
+	"CreatedBy": "jimmon89, DevolutionEX",
 	"CreatedByURL": "",
 	"DocsURL": "https://docs.ficsit.app/contentlib/latest/index.html",
 	"MarketplaceURL": "",
